# Zconverter

./: CMakeLists.txt  CMakePresets.json  Zconverter.h  register_context_menu.reg
cmake/: DeployMacInstall.cmake.in  DeployQtInstall.cmake.in
installers/: README-Windows-Installer.md  README-macOS-Installer.md  create_macos_dmg.sh  create_payload.bat  create_payload.ps1  zconverter_installer.nsi
src/: Zconverter.cpp
src/cli/: CommandLineParser.cpp  CommandLineParser.h
src/converters/: ImageToPdfConverter.cpp  ImageToPdfConverter.h  OfficeToPdfConverter.cpp  OfficeToPdfConverter.h
src/engine/: ConversionEngine.cpp  ConversionEngine.h  ConversionJob.h  IConverter.h  JobQueue.h  ThreadPool.h
src/shell/: ShellExtension.cpp  ShellExtension.def  ShellExtension.h
src/ui/: MainWindow.cpp  MainWindow.h
